--- a/config
+++ b/config
@@ -783,9 +783,9 @@ CONFIG_IP_MULTIPLE_TABLES=y
 # CONFIG_IP_ROUTE_VERBOSE is not set
 CONFIG_IP_ROUTE_CLASSID=y
 # CONFIG_IP_PNP is not set
-CONFIG_NET_IPIP=y
+CONFIG_NET_IPIP=m
 CONFIG_NET_IPGRE_DEMUX=m
-CONFIG_NET_IP_TUNNEL=y
+CONFIG_NET_IP_TUNNEL=m
 CONFIG_NET_IPGRE=m
 # CONFIG_NET_IPGRE_BROADCAST is not set
 # CONFIG_IP_MROUTE is not set
@@ -798,7 +798,7 @@ CONFIG_INET_AH=m
 CONFIG_INET_ESP=m
 CONFIG_INET_IPCOMP=m
 CONFIG_INET_XFRM_TUNNEL=m
-CONFIG_INET_TUNNEL=y
+CONFIG_INET_TUNNEL=m
 CONFIG_INET_XFRM_MODE_TRANSPORT=m
 CONFIG_INET_XFRM_MODE_TUNNEL=m
 CONFIG_INET_XFRM_MODE_BEET=m
@@ -1213,7 +1213,6 @@ CONFIG_OPENVSWITCH_VXLAN=m
 CONFIG_VSOCKETS=m
 CONFIG_VIRTIO_VSOCKETS=m
 CONFIG_VIRTIO_VSOCKETS_COMMON=m
-CONFIG_HYPERV_SOCK=m
 # CONFIG_NETLINK_DIAG is not set
 CONFIG_MPLS=y
 CONFIG_NET_MPLS_GSO=m
